--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,16 @@
   }
 }
 
+.TourismDiv{
+  
+  background-color: rgb(0, 247, 255);
+}
+.optionDiv{
+  margin-bottom: 85%;
+  background-color: rgb(0, 255, 200);
+}
 .options{
+  background-color: rgb(243, 243, 234);
   align-items: center;
   margin: 20px;
   float: left;
@@ -47,4 +56,40 @@
   height: 200px;
   width: 200px;
   
+}
+
+.h1-container{
+  background-color:rgb(156, 211, 212);
+  width: 60%;
+  height: 50%;
+  margin-left: 20%;
+  margin-top: 20px;
+}
+/* .search-div{
+  height: 10px;
+} */
+.search{
+  width: 50%;
+  border-radius: 10px;
+  font-size: 20px;
+  margin: 5px;
+}
+
+.display-movie{
+  width: 100%;
+  height: 50%;
+  background-color:lavender;
+  margin-top: 40px;
+  display: flex;
+}
+.image-div{
+  width: 300px;
+  height: 500px;
+  margin-right: 10px;
+}
+.title{
+  width: 100%;
+  height: 50%;
+  text-align: left;
+  font-style: italic;
 }
